--- a/api/customers/models/customers.settings.json
+++ b/api/customers/models/customers.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "customers",
   "info": {
-    "name": "customers"
+    "name": "customers",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -38,6 +39,9 @@
     "user": {
       "plugin": "users-permissions",
       "model": "user"
+    },
+    "birthday": {
+      "type": "date"
     }
   }
 }
