--- a/api/customers/models/customers.settings.json
+++ b/api/customers/models/customers.settings.json
@@ -42,6 +42,22 @@
     },
     "birthday": {
       "type": "date"
+    },
+    "status": {
+      "type": "boolean"
+    },
+    "suburb": {
+      "type": "string"
+    },
+    "town": {
+      "type": "string"
+    },
+    "quotes": {
+      "via": "customer",
+      "collection": "quotes"
+    },
+    "password": {
+      "type": "string"
     }
   }
 }
