--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "strapi-plugin-i18n": "3.6.10",
     "strapi-plugin-upload": "3.6.10",
     "strapi-plugin-users-permissions": "3.6.10",
-    "strapi-utils": "3.6.10"
+    "strapi-utils": "3.6.10",
+    "twilio": "^3.80.0"
   },
   "author": {
     "name": "A Strapi developer"
