Cambio en las variables de entorno

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 HOST=0.0.0.0
 PORT=1337
+TWILIO_ACCOUNT_SID = ACa1a698f1e2a7d4c330cdb89aa76a3bc2
+TWILIO_AUTH_TOKEN = d79856067f6eef710d249115058eae79
+MYNUM = +523319883933
+TWILIONUM = +12054311972
+# SENDGRID_API_KEY = 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
