--- a/api/customers/models/customers.settings.json
+++ b/api/customers/models/customers.settings.json
@@ -56,8 +56,9 @@
       "via": "customer",
       "collection": "quotes"
     },
-    "password": {
-      "type": "string"
+    "prescriptions": {
+      "via": "customer",
+      "collection": "prescriptions"
     }
   }
 }
