--- a/api/quotes/models/quotes.settings.json
+++ b/api/quotes/models/quotes.settings.json
@@ -22,6 +22,15 @@
     },
     "date": {
       "type": "datetime"
+    },
+    "room": {
+      "type": "string"
+    },
+    "service": {
+      "type": "richtext"
+    },
+    "especialites": {
+      "type": "string"
     }
   }
 }
