--- a/api/prescriptions/models/prescriptions.settings.json
+++ b/api/prescriptions/models/prescriptions.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "prescriptions",
   "info": {
-    "name": "prescriptions"
+    "name": "prescriptions",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -12,22 +13,30 @@
   "pluginOptions": {},
   "attributes": {
     "customer": {
-      "model": "customers"
+      "model": "customers",
+      "via": "prescriptions"
     },
     "doctor": {
-      "model": "doctor"
+      "model": "doctor",
+      "via": "prescriptions"
     },
-    "title": {
+    "weight": {
       "type": "string"
     },
-    "symptom": {
+    "treatment": {
       "type": "richtext"
     },
-    "date": {
-      "type": "date"
+    "size": {
+      "type": "string"
+    },
+    "allergies": {
+      "type": "string"
     },
     "observations": {
       "type": "richtext"
+    },
+    "file_number": {
+      "type": "string"
     }
   }
 }
