--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "knex": "0.21.18",
     "mysql": "2.18.1",
+    "nodemailer": "^6.7.7",
     "strapi": "3.6.10",
     "strapi-admin": "3.6.10",
     "strapi-connector-bookshelf": "3.6.10",
@@ -22,6 +23,7 @@
     "strapi-plugin-i18n": "3.6.10",
     "strapi-plugin-upload": "3.6.10",
     "strapi-plugin-users-permissions": "3.6.10",
+    "strapi-provider-email-sendgrid": "^3.6.10",
     "strapi-utils": "3.6.10",
     "twilio": "^3.80.0"
   },
