cedula y dias de trabajo

--- a/api/doctor/models/doctor.settings.json
+++ b/api/doctor/models/doctor.settings.json
@@ -62,6 +62,12 @@
     "prescriptions": {
       "via": "doctor",
       "collection": "prescriptions"
+    },
+    "cellule": {
+      "type": "string"
+    },
+    "workdates": {
+      "type": "json"
     }
   }
 }
