Cambios generales en api

--- a/api/prescriptions/models/prescriptions.settings.json
+++ b/api/prescriptions/models/prescriptions.settings.json
@@ -17,8 +17,8 @@
       "via": "prescriptions"
     },
     "doctor": {
-      "model": "doctor",
-      "via": "prescriptions"
+      "via": "prescriptions",
+      "model": "doctor"
     },
     "weight": {
       "type": "string"
