--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ TWILIO_ACCOUNT_SID =ACa1a698f1e2a7d4c330cdb89aa76a3bc2
 TWILIO_AUTH_TOKEN =2c3417b9646ea46471051f32ec96a530
 MYNUM =+523319883933
 TWILIONUM =+12054311972
-SENDGRID_API_KEY =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
+MAILJET_PUBLIC_KEY =9b932ad7daf3a78feafce7f6207de15c
+MAILJET_SECRET_KEY =3bebbffe0c1d11d146e06d5a2510ed0c
